style: minor spacing fixes

--- a/src/containers/DeveloperPortalProjects/Projects.scss
+++ b/src/containers/DeveloperPortalProjects/Projects.scss
@@ -14,7 +14,7 @@
     @media (max-width: 768px) {
       flex-direction: column;
       height: fit-content;
-      padding: 48px 40px;
+      padding: 48px 24px;
     }
   }
 
@@ -53,6 +53,10 @@
 
   &__main {
     padding: 72px 48px;
+
+    @media (max-width: 768px) {
+      padding: 72px 24px;
+    }
   }
 
   &__main-title {
@@ -70,23 +74,22 @@
 
   &__button-project {
     margin-right: 16px;
-  }
 
-  &__cover-image {
-    width: 360px;
-
-    @media (max-width: 1366px) {
-      width: 256px;
-    }
-
-    @media (max-width: 768px) {
-      display: none;
+    // specific case (was not in the figma design)
+    @media (max-width: 372px) {
+      &:first-of-type {
+        margin-bottom: 16px;
+      }
     }
   }
 
   &__showcase {
     background-color: var(--color-cyan-900);
     padding: 72px 48px;
+
+    @media (max-width: 768px) {
+      padding: 72px 24px;
+    }
 
     &-title {
       @extend %h1;
@@ -99,6 +102,14 @@
       display: grid;
       gap: 16px;
       grid-template-columns: repeat(3, 1fr);
+
+      @media (max-width: 1366px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @media (max-width: 768px) {
+        grid-template-columns: auto;
+      }
 
       &-tile {
         border: 3px solid var(--color-gray-800);
